Fix pane Z-index issue

--- a/src/scss/panes/_medium.scss
+++ b/src/scss/panes/_medium.scss
@@ -2,6 +2,7 @@
     background-color: white;
     background-color: #f8f8f8;
     min-width: 400px;
+    z-index: 1000;
 }
 
 .section-pane-actions {
